--- a/_posts/welcome/welcome.Rmd
+++ b/_posts/welcome/welcome.Rmd
@@ -1,13 +1,9 @@
 ---
 title: "Welcome to Graham Eglit's Blog"
 description: |
-  Welcome to our new blog, Graham Eglit's Blog. We hope you enjoy 
-  reading what we have to say!
+  Welcome to the blog.  I'll be doing some stuff here.  For now, this is just a trial post
 author:
-  - name: Nora Jones 
-    url: https://example.com/norajones
-    affiliation: Spacely Sprockets
-    affiliation_url: https://example.com/spacelysprokets
+  - name: Graham Eglit
 date: 12-23-2020
 output:
   distill::distill_article:
