--- a/about.Rmd
+++ b/about.Rmd
@@ -8,7 +8,7 @@ knitr::opts_chunk$set(echo = FALSE)
 ```
 
 
-```{r picture, fig.width=1,fig.heigh=1}
+```{r picture, out.width="50%",fig.align = 'center'}
 knitr::include_graphics("Eglit_Headshot.jpg")
 ```
 
